--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,11 @@
 {
-  "version":2,
-  "builds":[
-    {"src": "*.js", "use": "@vercel/node" }
+  "version": 2,
+  "builds": [
+    { "src": "src/**/*.js", "use": "@vercel/node" },
+    { "src": "public/**/*", "use": "@vercel/static" }
   ],
-  "routes":[
-    {
-      "src": "/(.*)",
-      "dest": "/"
-    }
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { "src": "/(.*)", "dest": "/public/$1" }
   ]
 }
